translation to Italian

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: Hi there!
+title: Ciao!
 background: '/img/bg-index.jpeg'
 ---
 
-<p>Hi! This is my personal website where I share my research experices. Below this you can see a selection of my latest projects. Enjoy!  </p>
+<p>Ciao! Questo è il mio sito internet personale e blog sul quale condivido le mie ricerche scientifiche. Qua sotto puoi trovare una selezione dei miei progetti più recenti. Grazie per il tuo interesse! </p>
 
 {% for post in site.posts %}
 
