--- a/research/index.html
+++ b/research/index.html
@@ -1,10 +1,11 @@
 ---
 layout: page
-title: My Research
+title: Progetti di ricerca
 background: '/img/bg-research-par.jpg'
 ---
 
-<p>Here you can find a list of the projects which I have been leading. Enjoy the reading!</p>
+<p>Qui potete trovare un elenco dei progetti che ho condotto. Buona lettura!</p>
+
 
 {% for post in site.posts %}
 {%- if post.category == "research" -%}
